# voidinstall

./: LICENCE  README.md  setup.cfg
src/void_installer/lib/: installer.py  task.py
