[metadata]
name = void_installer
version = attr: void_installer.__version__
description = Void Linux installer
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 2-Clause
license_files = LICENCE
url = https://github.com/classabbyamp/void-installer
author = classabbyamp
author_email = void@placeviolette.net
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    void-installer = void_installer.__main__:main

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"